# verefine_pipeline

./: .gitignore  README.md  download_data.sh  hsr_grasping.rviz  startup.sh  stl.py
compose/densefusion_pipeline/: docker-compose.yml
compose/ppf_pipeline/: docker-compose.yml
config/: config.json  params.yaml
src/: test_obj_det.py  test_obj_det_test.py  test_ppf.py
src/densefusion/: Dockerfile  densefusion.py  requirements.txt  ros_pose.sh  ros_pose_estimation.py  ros_pose_refinement.py
src/icp/: Dockerfile  icp.py  requirements.txt  ros_pose_refinement.py
src/icp/cpp/: CMakeLists.txt  build.sh  icp.cpp
src/maskrcnn/: Dockerfile  maskrcnn.py  maskrcnn_util.py  ros_detection.py
src/ppf/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  ros_entrypoint.sh  run.sh
src/ppf/src/ppf/: CMakeLists.txt
src/ppf/src/ppf/cmake/: DefinePCLImportedTarget.cmake  FindCMPH.cmake  PPFRecognizerConfig.cmake.in
src/ppf/src/ppf/include/: PPFRecognizer.h  PPFRecognizerParameter.h  init_recognizer.h  ppf_recognition_pipeline.h  recognition_pipeline.h
src/ppf/src/ppf/include/ppf/: correspondence.h  correspondence_finder.h  hough_voting.h  local_coordinate.h  model_search.h
src/ppf/src/ppf/include/ppf/impl/: correspondence_finder.hpp
src/ppf/src/ppf/include/v4r/apps/: CloudSegmenter.h
src/ppf/src/ppf/include/v4r/common/: Clustering.h  DataContainer.h  color_comparison.h  color_transforms.h  depth_outlines.h  depth_outlines_params.h  downsampler.h  graph_geometric_consistency.h  greedy_local_clustering.h  histogram.h  intrinsics.h  metrics.h  miscellaneous.h  noise_models.h  occlusion_reasoning.h  pcl_opencv.h  pcl_utils.h  pcl_visualization_utils.h  point_types.h  time.h  topsort_pruning.h  zbuffering.h
src/ppf/src/ppf/include/v4r/common/impl/: DataMatrix2D.hpp  pcl_opencv.hpp  zbuffering.hpp
src/ppf/src/ppf/include/v4r/geometry/: average.h  geometry.h  normals.h
src/ppf/src/ppf/include/v4r/io/: eigen.h  filesystem.h
src/ppf/src/ppf/include/v4r/recognition/: hypotheses_verification.h  hypotheses_verification_param.h  hypotheses_verification_visualization.h  local_object_model.h  model.h  multiview_recognizer.h  object_hypothesis.h  outline_verification.h  source.h
src/ppf/src/ppf/include/v4r/registration/: noise_model_based_cloud_integration.h
src/ppf/src/ppf/include/v4r/segmentation/: all_headers.h  plane_extractor.h  plane_extractor_organized_multiplane.h  plane_extractor_sac.h  plane_extractor_tile.h  plane_utils.h  segmentation_utils.h  segmenter.h  segmenter_2d_connected_components.h  segmenter_conditional_euclidean.h  segmenter_euclidean.h  segmenter_organized_connected_component.h  smooth_Euclidean_segmenter.h  types.h
src/ppf/src/ppf/src/: PPFRecognizer.cpp  PPFRecognizerParameter.cpp  ppf_python_bindings.cpp  ppf_recognition_pipeline.cpp  recognition_pipeline.cpp  test_ppf_recognizer.cpp
src/ppf/src/ppf/src/ppf/: hough_voting.cpp  local_coordinate.cpp  model_search.cpp
src/ppf/src/ppf/src/v4r/apps/: CloudSegmenter.cpp
src/ppf/src/ppf/src/v4r/common/: Clustering.cpp  depth_outlines.cpp  downsampler.cpp  graph_geometric_consistency.cpp  intrinsics.cpp  metrics.cpp  miscellaneous.cpp  noise_models.cpp  occlusion_reasoning.cpp  pcl_opencv.cpp  pcl_utils.cpp  time.cpp  zbuffering.cpp
src/ppf/src/ppf/src/v4r/geometry/: geometry.cpp  normals.cpp
src/ppf/src/ppf/src/v4r/io/: filesystem.cpp
src/ppf/src/ppf/src/v4r/recognition/: hypotheses_verification.cpp  hypotheses_verification_param.cpp  hypotheses_verification_visualization.cpp  model.cpp  object_hypothesis.cpp  outline_verification.cpp  recognition_model_hv.cpp  source.cpp
src/ppf/src/ppf/src/v4r/registration/: noise_model_based_cloud_integration.cpp
src/ppf/src/ppf/src/v4r/segmentation/: plane_extractor.cpp  plane_extractor_organized_multiplane.cpp  plane_extractor_sac.cpp  plane_extractor_tile.cpp  segmenter.cpp  segmenter_2d_connected_components.cpp  segmenter_conditional_euclidean.cpp  segmenter_euclidean.cpp  segmenter_organized_connected_component.cpp  smooth_Euclidean_segmenter.cpp  types.cpp
src/ppf/src/ppf_recognizer_ros/: CMakeLists.txt  README.md  package.xml
src/ppf/src/ppf_recognizer_ros/cfg/: ppf_pose_estimation_config.ini  rgb_calibration_r2.1.yaml  v4r_object_reco_config_global.ini  v4r_object_reco_config_large_objects_fast.ini  v4r_object_reco_config_ppf.ini  v4r_object_reco_config_small_objects.ini  v4r_object_reco_orix_gift_box_demo_config.ini  xtion_calibration.intr
src/ppf/src/ppf_recognizer_ros/include/: recognizer_ros.h
src/ppf/src/ppf_recognizer_ros/launch/: hsr_ppf_pipeline.launch  recognition_service.launch
src/ppf/src/ppf_recognizer_ros/src/: recognizer_ros.cpp  test_object_recognizer.cpp
src/ppf/src/tracebot_msgs/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
src/ppf/src/tracebot_msgs/action/: ComputeTrajectory.action  DTAssertNewObject.action  DTQueryKnowledge.action  DTRequestColorImage.action  DTRequestComponentRegion.action  DTRequestObjectComponentPose.action  DTRequestObjectPose.action  DTRequestRegion.action  DTRequestRegionColorImage.action  DTRequestRobotParameter.action  DTUpdateObject.action  DTVisualExpectationMatch.action  Dummy.action  ExecuteGrasp.action  ExecuteTrajectory.action  InsertCanister.action  LiftObject.action  PreshapeGrasp.action  ReleaseGrasp.action
src/ppf/src/tracebot_msgs/msg/: CloseType.msg  DTQueryKnowledgeAnswer.msg  DTQueryKnowledgeQuery.msg  DTRobotParameterAnswer.msg  DTRobotParameterQuery.msg  DTVisualMatchAnswer.msg  GraspType.msg  ReleaseType.msg  SerializedMsg.msg
src/task/: Dockerfile  renderer.py  renderer_task.py  requirements.txt  requirements1.txt  ros_clear_table.py  ros_grasp_object.py
src/util/: dataset.py  eval_break_bias.py  eval_break_gt.py  eval_break_gt.sh  eval_break_gt_bop.sh  eval_ex_apc.py  eval_lm.py  eval_pir_bab.py  eval_renderer.py  eval_ycbv.py  fast_renderer.py  renderer.py  requirements.txt  rotation.py
src/verefine/: Dockerfile  plane_segmentation.py  refiner_interface.py  requirements.txt  ros_entrypoint.sh  ros_estimate_poses.py  run.sh  (+2 more)
(+24 files in other folders)
