<?xml version="1.0"?>
<package format="2">

  <name>tracebot_msgs</name>
  <version>0.0.0</version>
  <description>The tracebot_msgs package</description>

  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>vision_msgs</depend>

  <export>
    <architecture_independent/>
    <build_type>catkin</build_type>
  </export>

</package>
